src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTBlendFuncSeparate_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTBlendFuncSeparate_StringErrorContext.class */
public final class EXTBlendFuncSeparate_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlendFuncSeparateEXT(IIII)V", "net/labymod/core/laby3d/opengl/error/generated/EXTBlendFuncSeparateErrorContext");
        return methods;
    }
}
